# MonicaImageProcess

./: .gitignore  BaseOnnxRuntime.cpp  BaseOnnxRuntime.h  CMakeLists.txt  FaceDetect.cpp  FaceDetect.h  Makefile  OnnxRuntimeBase.cpp  OnnxRuntimeBase.h  README.md  cmake_install.cmake  library.cpp  library.h
faceDetect/: FaceDetect.cpp
include/: Constants.h  PyramidImage.h  library.h
include/cartoon/: AnimeGAN.h
include/colorcorrection/: ColorCorrection.h
include/common/: OnnxRuntimeBase.h
include/faceDetect/: FaceDetect.h
include/faceSwap/: Face68Landmarks.h  FaceEmbdding.h  FaceEmbedding.h  FaceEnhance.h  FaceSwap.h  Yolov8Face.h
include/matchTemplate/: MatchTemplate.h
include/sketchDrawing/: SketchDrawing.h
include/utils/: JNIUtils.h  JNIUtils.hpp  Timer.h  Utils.h
jni/: cn_netdiscovery_monica_opencv_ImageProcess.cpp  cn_netdiscovery_monica_opencv_ImageProcess.h
script/: build_opencv_world_4100.sh  fix_dylib_dependencies.sh
sketchDrawing/: InformativeDrawings.cpp  InformativeDrawings.h  SketchDrawing.cpp  SketchDrawing.h
src/: CMakeLists.txt  PyramidImage.cpp  fix_dylib_dependencies.sh  library.cpp
src/cartoon/: AnimeGAN.cpp
src/colorcorrection/: ColorCorrection.cpp
src/common/: OnnxRuntimeBase.cpp
src/faceDetect/: FaceDetect.cpp
src/faceSwap/: Face68Landmarks.cpp  FaceEmbdding.cpp  FaceEmbedding.cpp  FaceEnhance.cpp  FaceSwap.cpp  Yolov8Face.cpp
src/jni/: cn_netdiscovery_monica_opencv_ImageProcess.cpp  cn_netdiscovery_monica_opencv_ImageProcess.h
src/jni/color_correction/: color_correction_internal.h  jni_color_correction.cpp
src/jni/format_decoder/: format_decoder_internal.h  jni_format_decoder.cpp
src/jni/utils/: jni_utils.cpp  jni_utils.h  jni_utils.hpp
src/matchTemplate/: MatchTemplate.cpp
src/pyramid/: PyramidImage.cpp
src/script/: build_libheif_deps.sh  build_opencv_world_4100.sh  fix_dylib_dependencies.sh
src/server/: CMakeLists.txt  GlobalResource.cpp  GlobalResource.h  HttpUtils.cpp  HttpUtils.h  main.cpp
src/sketchDrawing/: SketchDrawing.cpp
src/utils/: JNIUtils.cpp  Timer.cpp  Utils.cpp
